nav bar not visible in login and signup page fixed

--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -3,7 +3,7 @@
     width: max-content;
     padding: 30px;
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 6px;
